@@ -5,6 +5,8 @@ Version 1.18.1 (rgerhards), 2007-08-??
 - applied patch from Michel Samia to fix compilation when the pthreads
   feature is disabled
 - some code cleanup (moved action object to its own file set)
+- add config directive $MainMsgQueueSize, which now allows to configure the
+  queue size dynamically
 ---------------------------------------------------------------------------
 Version 1.18.0 (rgerhards), 2007-08-03
 - rsyslog now supports fallback actions when an action did not work. This
